using <br> for new lines

--- a/files/index.html
+++ b/files/index.html
@@ -13,18 +13,18 @@
 <h5>This my first web page title</h5>
 <h6>This my first web page title</h6>
 <h1>My first paragraph</h1>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-    Aut cumque dicta ducimus error laudantium nemo, officia placeat quidem sequi vitae?
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing <br>
+    Aut cumque dicta ducimus error laudantium nemo, officia placeat quidem sequi vitae?<br>
     A atque commodi eligendi est fugit, nesciunt nihil optio sed.</p>
 <h1>My second paragraph</h1>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-    Alias aspernatur blanditiis dolor eos, incidunt ipsum iusto
-    nostrum numquam praesentium quis quo reiciendis repudiandae saepe sit
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br>
+    Alias aspernatur blanditiis dolor eos, incidunt ipsum iusto<br>
+    nostrum numquam praesentium quis quo reiciendis repudiandae saepe sit<br>
     temporibus velit veniam vitae voluptates?</p>
 <h1>My third paragraph</h1>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-    Alias aspernatur blanditiis dolor eos, incidunt ipsum iusto
-    nostrum numquam praesentium quis quo reiciendis repudiandae saepe sit
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br>
+    Alias aspernatur blanditiis dolor eos, incidunt ipsum iusto<br>
+    nostrum numquam praesentium quis quo reiciendis repudiandae saepe sit<br>
     temporibus velit veniam vitae voluptates?</p>
 
 </body>
