--- a/files/pratice3.html
+++ b/files/pratice3.html
@@ -6,16 +6,16 @@
 </head>
 <body>
    <h1>My practice</h1>
-<p>
-    My name is hekim<br>
+<p style="color: cornflowerblue">
+    My name is <strong>Hekim</strong><br>
     My age is 25<br>
-    My Job is backend developer<br>
+    My Job is <em><u>  backend developer    </u> </em>  <br>
 </p>
-
-<p>
-    My name is John<br>
+<hr size="5px"  style="background-color: cornflowerblue" />
+<p style= background-color:brown >
+    My name is  <strong>  John </strong><br>
     My age is 30<br>
-    My job is Developer<br>
+    My job is  <em> <u> Developer  </u></em> <br>
 </p>
 </body>
 </html>
