--- a/files/orderedList.html
+++ b/files/orderedList.html
@@ -18,7 +18,7 @@
 <!--  this comment line in html-->
 <!--  it works   -->
 <!--   it is very good  -->
-     <img height="300px" src="2024-03-06%20(1).png">
+
     <img height="300px" src="https://ugc.production.linktr.ee/wqOwBbdoRc6xBWxM7FtF_HXmt7FL0jgBMXd5v">
      <ol>
     <li> Java Developer </li>
@@ -36,7 +36,7 @@
     <li> SDET </li>
     <li> CS </li>
     <li> JD ALumni </li>
-
+<a href="https://www.youtube.com/channel/UCbAIsZQg5S_EHELhmO_5Www" target="_blank">  MY YouTube channal!</a>
 
 </ul>
 </body>
