--- a/files/index.html
+++ b/files/index.html
@@ -6,16 +6,29 @@
 
 </head>
 <body>
-<h1>Welcome to my webpage!</h1>
-<h2>This my first web page title</h2>
-<h3>This my first web page title</h3>
-<h4>This my first web page title</h4>
-<h5>This my first web page title</h5>
-<h6>This my first web page title</h6>
+<div style="background-color: cadetblue"; style ="font-size: medium ">
+    <h1>Welcome to my webpage!</h1>
+    <h2>This my first web page title</h2>
+    <h3>This my first web page title</h3>
+    <h4>This my first web page title</h4>
+    <h5>This my first web page title</h5>
+    <h6>This my first web page title</h6>
+</div>
+<div style="background-color: aquamarine">
 <h1>My first paragraph</h1>
+  <div style="font-size: medium">
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing <br>
     Aut cumque dicta ducimus error laudantium nemo, officia placeat quidem sequi vitae?<br>
     A atque commodi eligendi est fugit, nesciunt nihil optio sed.</p>
+
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br>
+          Alias aspernatur blanditiis dolor eos, incidunt ipsum iusto<br>
+          nostrum numquam praesentium quis quo reiciendis repudiandae saepe sit<br>
+          temporibus velit veniam vitae voluptates?</p>
+  </div>
+</div>
+
+
 <h1>My second paragraph</h1>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br>
     Alias aspernatur blanditiis dolor eos, incidunt ipsum iusto<br>
