--- a/files/olafVlog/Practice13.html
+++ b/files/olafVlog/Practice13.html
@@ -3,14 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <title>formsPractice</title>
+    <style>
+
+
+    </style>
+
+
 </head>
-<body>
+<body style="background-color: #a6b8b8">
 <h1>Please select your favorite food!</h1>
 <form>
+    <p >Lorem ipsum dolor sit amet, consectetur<br>
+        adipisicing elit. Accusantium amet, aut culpa dolores eligendi eos,<br>
+        eum excepturi expedita, fugit in maxime non placeat possimus quis temporibus velit vero vitae voluptas?</p><br>
     <input type="radio" name="food" value="Beef" >Beef
     <input type="radio" name="food"value="Burger" >Burger
     <input type="radio" name="food" value="Salad" >Salad
-    <hr>
+    <hr >
      <br>
     <p style="font-size: medium">Let us know you want your food</p>
      <textarea cols="25" rows="5 "  placeholder  ="comment here">  commer Here</textarea>
@@ -25,7 +34,8 @@
         <option value="beef">lamp sauce </option>
     </select>
     <hr>
-    <h3>Create ab account with us in 3 easy steps</h3>
+    <h3>
+         Create ab account with us in 3 easy steps</h3>
     <p>Creating an acount allows you to track your order</p>
    Email:
        <input type="email" name="Email" placeholder="enter your email:">
@@ -33,7 +43,7 @@
    UserName: <input type="text" name="UserName" placeholder="Enter your name: ">
     <br>
     PassWord:<input type="password" name="passWord" placeholder="Enter your PassWord: ">
- <a class="sign up button" href="#">sing- Up</a>
+ <a class="sign up button" href="#" onclick="alert('thank you for sign up')">sing- Up</a>
 
 
 
