--- a/files/olafVlog/Practice13.html
+++ b/files/olafVlog/Practice13.html
@@ -3,14 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>formsPractice</title>
-    <style>
-
-
-    </style>
+    <link rel="stylesheet" href="../Css/cssStyles.css">
 
 
 </head>
-<body style="background-color: #a6b8b8">
+<body >
 <h1>Please select your favorite food!</h1>
 <form>
     <p >Lorem ipsum dolor sit amet, consectetur<br>
@@ -26,7 +23,7 @@
     <hr>
     <br>
 
-    <h3>Select your sauce!</h3>
+    <h3 >Select your sauce!</h3>
     <select>
         <option value="sauces" disabled selected> sauces</option>
         <option value="beef">beef sauce </option>
