--- a/files/olafVlog/Practice13.html
+++ b/files/olafVlog/Practice13.html
@@ -7,10 +7,10 @@
 
 
 </head>
-<body >
+<body class="class1">
 <h1>Please select your favorite food!</h1>
 <form>
-    <p >Lorem ipsum dolor sit amet, consectetur<br>
+    <p  class="class1">Lorem ipsum dolor sit amet, consectetur<br>
         adipisicing elit. Accusantium amet, aut culpa dolores eligendi eos,<br>
         eum excepturi expedita, fugit in maxime non placeat possimus quis temporibus velit vero vitae voluptas?</p><br>
     <input type="radio" name="food" value="Beef" >Beef
@@ -24,7 +24,7 @@
     <br>
 
     <h3 >Select your sauce!</h3>
-    <select>
+    <select class="class1">
         <option value="sauces" disabled selected> sauces</option>
         <option value="beef">beef sauce </option>
         <option value="beef">chicken sauce </option>
@@ -40,8 +40,8 @@
    UserName: <input type="text" name="UserName" placeholder="Enter your name: ">
     <br>
     PassWord:<input type="password" name="passWord" placeholder="Enter your PassWord: ">
- <a class="sign up button" href="#" onclick="alert('thank you for sign up')">sing- Up</a>
 
+    <input class="button-33" type="submit" value="submit" id="submit">
 
 
 </form>
